--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.mywardrobe"
-        minSdk 25
+        minSdk 26
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -43,9 +43,12 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
+
     //AndroidX
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.0-alpha08"
 
     // Compose
     implementation 'androidx.compose.material3:material3:1.1.2'
@@ -60,11 +63,18 @@ dependencies {
     implementation 'androidx.camera:camera-camera2:1.4.0-alpha02'
     implementation 'androidx.camera:camera-lifecycle:1.4.0-alpha02'
     implementation 'androidx.camera:camera-view:1.4.0-alpha02'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22")
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
+
+    // RetroFit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
 
     // ZXing
     implementation 'com.google.zxing:core:3.4.1'
