Get weather icon

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,7 @@ dependencies {
 
     // MLKit
     implementation 'com.google.mlkit:barcode-scanning:17.2.0'
+
+    // Coil
+    implementation "io.coil-kt:coil-compose:1.4.0"
 }
