--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
     implementation "androidx.compose.runtime:runtime-livedata:1.6.0-alpha08"
+    implementation "androidx.activity:activity-ktx:1.8.0"
 
     // Compose
     implementation 'androidx.compose.material3:material3:1.1.2'
@@ -84,5 +85,8 @@ dependencies {
     implementation 'com.google.mlkit:barcode-scanning:17.2.0'
 
     // Coil
-    implementation "io.coil-kt:coil-compose:1.4.0"
+    implementation "io.coil-kt:coil-compose:2.2.2"
+
+    // Pluck
+    implementation("com.himanshoe:pluck:1.0.0-alpha01")
 }
