--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
+import org.jetbrains.kotlin.gradle.tasks.KaptGenerateStubs
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -28,15 +32,18 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.0'
-        //kotlinCompilerVersion '1.5.30'
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
+}
+
+kotlin {
+    jvmToolchain(17)
 }
 
 dependencies {
@@ -48,15 +55,16 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.2"
-    implementation "androidx.compose.runtime:runtime-livedata:1.6.0-alpha08"
-    implementation "androidx.activity:activity-ktx:1.8.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
+    implementation "androidx.compose.runtime:runtime-livedata:1.6.0-beta01"
+    implementation "androidx.activity:activity-ktx:1.8.1"
 
     // Compose
     implementation 'androidx.compose.material3:material3:1.1.2'
     implementation "androidx.compose.ui:ui:1.5.4"
     implementation "androidx.compose.material:material:1.5.4"
     implementation "androidx.compose.ui:ui-tooling:1.5.4"
-    implementation "androidx.activity:activity-compose:1.8.0"
+    implementation "androidx.activity:activity-compose:1.8.1"
     implementation 'androidx.navigation:navigation-compose:2.7.5'
 
     // CameraX
@@ -64,12 +72,12 @@ dependencies {
     implementation 'androidx.camera:camera-camera2:1.4.0-alpha02'
     implementation 'androidx.camera:camera-lifecycle:1.4.0-alpha02'
     implementation 'androidx.camera:camera-view:1.4.0-alpha02'
-    implementation 'com.google.android.gms:play-services-location:19.0.1'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22")
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.10'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0'
 
     // RetroFit
@@ -85,8 +93,17 @@ dependencies {
     implementation 'com.google.mlkit:barcode-scanning:17.2.0'
 
     // Coil
-    implementation "io.coil-kt:coil-compose:2.2.2"
+    implementation "io.coil-kt:coil-compose:2.5.0"
 
     // Pluck
     implementation("com.himanshoe:pluck:1.0.0-alpha01")
+
+    // SQLite with Room
+    def room_version = "2.6.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // Pour utiliser Kotlin avec Room, ajoutez kapt au lieu de annotationProcessor
+    kapt "androidx.room:room-compiler:$room_version"
 }
